--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "AndroidLibXrayLite"]
 	path = AndroidLibXrayLite
 	url = https://github.com/2dust/AndroidLibXrayLite
-[submodule "badvpn"]
-	path = badvpn
-	url = https://github.com/XTLS/badvpn
+[submodule "hev-socks5-tunnel"]
+	path = hev-socks5-tunnel
+	url = https://github.com/heiher/hev-socks5-tunnel
 [submodule "libancillary"]
 	path = libancillary
 	url = https://github.com/shadowsocks/libancillary
