--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,43 +75,39 @@ jobs:
         # Ensure Android.mk and Application.mk exist
         if [ ! -f "hev-socks5-tunnel/Android.mk" ]; then
           echo "Creating Android.mk file..."
-          cat > hev-socks5-tunnel/Android.mk << 'EOF'
-LOCAL_PATH := $(call my-dir)
-
-include $(CLEAR_VARS)
-LOCAL_MODULE := hev-socks5-tunnel
-
-LOCAL_CFLAGS += -Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers
-LOCAL_CFLAGS += -std=gnu99 -D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L
-LOCAL_CFLAGS += -I$(LOCAL_PATH)/src -I$(LOCAL_PATH)/third-part/lwip/include
-LOCAL_CFLAGS += -I$(LOCAL_PATH)/third-part/yaml/yaml/src
-
-LOCAL_SRC_FILES := \
-	$(wildcard $(LOCAL_PATH)/src/*.c) \
-	$(wildcard $(LOCAL_PATH)/src/core/*.c) \
-	$(wildcard $(LOCAL_PATH)/src/tunnel/*.c) \
-	$(wildcard $(LOCAL_PATH)/third-part/lwip/src/core/*.c) \
-	$(wildcard $(LOCAL_PATH)/third-part/lwip/src/core/ipv4/*.c) \
-	$(wildcard $(LOCAL_PATH)/third-part/lwip/src/core/ipv6/*.c) \
-	$(wildcard $(LOCAL_PATH)/third-part/lwip/src/api/*.c) \
-	$(wildcard $(LOCAL_PATH)/third-part/yaml/yaml/src/*.c)
-
-LOCAL_STATIC_LIBRARIES := hev-task-system
-
-include $(BUILD_SHARED_LIBRARY)
-
-$(call import-module, hev-task-system)
-EOF
+          echo 'LOCAL_PATH := $$(call my-dir)' > hev-socks5-tunnel/Android.mk
+          echo '' >> hev-socks5-tunnel/Android.mk
+          echo 'include $$(CLEAR_VARS)' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_MODULE := hev-socks5-tunnel' >> hev-socks5-tunnel/Android.mk
+          echo '' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_CFLAGS += -Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_CFLAGS += -std=gnu99 -D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_CFLAGS += -I$$(LOCAL_PATH)/src -I$$(LOCAL_PATH)/third-part/lwip/include' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_CFLAGS += -I$$(LOCAL_PATH)/third-part/yaml/yaml/src' >> hev-socks5-tunnel/Android.mk
+          echo '' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_SRC_FILES := \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/src/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/src/core/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/src/tunnel/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/core/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/core/ipv4/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/core/ipv6/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/api/*.c) \' >> hev-socks5-tunnel/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/yaml/yaml/src/*.c)' >> hev-socks5-tunnel/Android.mk
+          echo '' >> hev-socks5-tunnel/Android.mk
+          echo 'LOCAL_STATIC_LIBRARIES := hev-task-system' >> hev-socks5-tunnel/Android.mk
+          echo '' >> hev-socks5-tunnel/Android.mk
+          echo 'include $$(BUILD_SHARED_LIBRARY)' >> hev-socks5-tunnel/Android.mk
+          echo '' >> hev-socks5-tunnel/Android.mk
+          echo '$$(call import-module, hev-task-system)' >> hev-socks5-tunnel/Android.mk
         fi
 
         if [ ! -f "hev-socks5-tunnel/Application.mk" ]; then
           echo "Creating Application.mk file..."
-          cat > hev-socks5-tunnel/Application.mk << 'EOF'
-APP_PLATFORM := android-21
-APP_ABI := armeabi-v7a arm64-v8a x86 x86_64
-APP_CFLAGS := -O3
-APP_MODULES := hev-socks5-tunnel
-EOF
+          echo 'APP_PLATFORM := android-21' > hev-socks5-tunnel/Application.mk
+          echo 'APP_ABI := armeabi-v7a arm64-v8a x86 x86_64' >> hev-socks5-tunnel/Application.mk
+          echo 'APP_CFLAGS := -O3' >> hev-socks5-tunnel/Application.mk
+          echo 'APP_MODULES := hev-socks5-tunnel' >> hev-socks5-tunnel/Application.mk
         fi
 
         # Ensure hev-task-system exists
@@ -124,21 +120,19 @@ EOF
         # Ensure hev-task-system Android.mk exists
         if [ ! -f "hev-socks5-tunnel/third-part/hev-task-system/Android.mk" ]; then
           echo "Creating hev-task-system Android.mk..."
-          cat > hev-socks5-tunnel/third-part/hev-task-system/Android.mk << 'EOF'
-LOCAL_PATH := $(call my-dir)
-
-include $(CLEAR_VARS)
-LOCAL_MODULE := hev-task-system
-
-LOCAL_CFLAGS += -Wall -Wextra -Wno-unused-parameter
-LOCAL_CFLAGS += -std=gnu99 -D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L
-LOCAL_CFLAGS += -I$(LOCAL_PATH)/src
-
-LOCAL_SRC_FILES := \
-	$(wildcard $(LOCAL_PATH)/src/*.c)
-
-include $(BUILD_STATIC_LIBRARY)
-EOF
+          echo 'LOCAL_PATH := $$(call my-dir)' > hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'include $$(CLEAR_VARS)' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'LOCAL_MODULE := hev-task-system' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'LOCAL_CFLAGS += -Wall -Wextra -Wno-unused-parameter' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'LOCAL_CFLAGS += -std=gnu99 -D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'LOCAL_CFLAGS += -I$$(LOCAL_PATH)/src' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'LOCAL_SRC_FILES := \' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo '	$$(wildcard $$(LOCAL_PATH)/src/*.c)' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
+          echo 'include $$(BUILD_STATIC_LIBRARY)' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
         fi
 
         # Set up jni directory
