--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,17 +35,24 @@ jobs:
         echo "Checking hev-socks5-tunnel directory..."
         ls -la hev-socks5-tunnel/
         
-        # Checking build files
         echo "Checking build files..."
         ls -la hev-socks5-tunnel/build.mk || echo "build.mk not found"
         
         # Make sure the file exists
         if [ ! -f "hev-socks5-tunnel/build.mk" ]; then
-          echo "build.mk is missing, downloading from original repo"
+          echo "build.mk missing, creating from source repository"
           curl -o hev-socks5-tunnel/build.mk https://raw.githubusercontent.com/heiher/hev-socks5-tunnel/master/build.mk
+          cat hev-socks5-tunnel/build.mk
         fi
 
     - name: Setup Android SDK
+      uses: android-actions/setup-android@v3.2.0
+      with:
+        log-accepted-android-sdk-licenses: false
+        cmdline-tools-version: '12266719'
+        packages: 'platforms;android-35 build-tools;35.0.0 platform-tools'
+
+    - name: Install NDK
       run: |
         echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
           --channel=3 \
@@ -54,11 +61,6 @@ jobs:
         sed -i '10i\
         \
             ndkVersion = "29.0.13113456"' ${{ github.workspace }}/V2rayNG/app/build.gradle.kts
-
-    - name: Create local.properties
-      run: |
-        echo "sdk.dir=$ANDROID_HOME" > ${{ github.workspace }}/V2rayNG/local.properties
-        echo "Created local.properties with ANDROID_HOME=$ANDROID_HOME"
 
     - name: Restore cached libhev-socks5-tunnel
       id: cache-libhev-socks5-tunnel-restore
@@ -70,85 +72,24 @@ jobs:
     - name: Build libhev-socks5-tunnel
       if: steps.cache-libhev-socks5-tunnel-restore.outputs.cache-hit != 'true'
       run: |
-        echo "Setting up build environment for hev-socks5-tunnel..."
+        echo "Verifying and preparing for build..."
+        ls -la hev-socks5-tunnel/
         
-        # Ensure Android.mk and Application.mk exist
-        if [ ! -f "hev-socks5-tunnel/Android.mk" ]; then
-          echo "Creating Android.mk file..."
-          echo 'LOCAL_PATH := $$(call my-dir)' > hev-socks5-tunnel/Android.mk
-          echo '' >> hev-socks5-tunnel/Android.mk
-          echo 'include $$(CLEAR_VARS)' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_MODULE := hev-socks5-tunnel' >> hev-socks5-tunnel/Android.mk
-          echo '' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_CFLAGS += -Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_CFLAGS += -std=gnu99 -D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_CFLAGS += -I$$(LOCAL_PATH)/src -I$$(LOCAL_PATH)/third-part/lwip/include' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_CFLAGS += -I$$(LOCAL_PATH)/third-part/yaml/yaml/src' >> hev-socks5-tunnel/Android.mk
-          echo '' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_SRC_FILES := \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/src/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/src/core/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/src/tunnel/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/core/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/core/ipv4/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/core/ipv6/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/lwip/src/api/*.c) \' >> hev-socks5-tunnel/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/third-part/yaml/yaml/src/*.c)' >> hev-socks5-tunnel/Android.mk
-          echo '' >> hev-socks5-tunnel/Android.mk
-          echo 'LOCAL_STATIC_LIBRARIES := hev-task-system' >> hev-socks5-tunnel/Android.mk
-          echo '' >> hev-socks5-tunnel/Android.mk
-          echo 'include $$(BUILD_SHARED_LIBRARY)' >> hev-socks5-tunnel/Android.mk
-          echo '' >> hev-socks5-tunnel/Android.mk
-          echo '$$(call import-module, hev-task-system)' >> hev-socks5-tunnel/Android.mk
+        # Make sure all required files exist
+        if [ ! -f "hev-socks5-tunnel/build.mk" ]; then
+          echo "build.mk is missing, downloading from original repo"
+          curl -o hev-socks5-tunnel/build.mk https://raw.githubusercontent.com/heiher/hev-socks5-tunnel/master/build.mk
         fi
-
-        if [ ! -f "hev-socks5-tunnel/Application.mk" ]; then
-          echo "Creating Application.mk file..."
-          echo 'APP_PLATFORM := android-21' > hev-socks5-tunnel/Application.mk
-          echo 'APP_ABI := armeabi-v7a arm64-v8a x86 x86_64' >> hev-socks5-tunnel/Application.mk
-          echo 'APP_CFLAGS := -O3' >> hev-socks5-tunnel/Application.mk
-          echo 'APP_MODULES := hev-socks5-tunnel' >> hev-socks5-tunnel/Application.mk
-        fi
-
-        # Ensure hev-task-system exists
-        if [ ! -d "hev-socks5-tunnel/third-part/hev-task-system" ]; then
-          echo "Cloning hev-task-system..."
-          mkdir -p hev-socks5-tunnel/third-part
-          git clone --recursive https://github.com/heiher/hev-task-system.git hev-socks5-tunnel/third-part/hev-task-system
-        fi
-
-        # Ensure hev-task-system Android.mk exists
-        if [ ! -f "hev-socks5-tunnel/third-part/hev-task-system/Android.mk" ]; then
-          echo "Creating hev-task-system Android.mk..."
-          echo 'LOCAL_PATH := $$(call my-dir)' > hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'include $$(CLEAR_VARS)' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'LOCAL_MODULE := hev-task-system' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'LOCAL_CFLAGS += -Wall -Wextra -Wno-unused-parameter' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'LOCAL_CFLAGS += -std=gnu99 -D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'LOCAL_CFLAGS += -I$$(LOCAL_PATH)/src' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'LOCAL_SRC_FILES := \' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo '	$$(wildcard $$(LOCAL_PATH)/src/*.c)' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo '' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-          echo 'include $$(BUILD_STATIC_LIBRARY)' >> hev-socks5-tunnel/third-part/hev-task-system/Android.mk
-        fi
-
-        # Set up jni directory
-        mkdir -p V2rayNG/app/src/main/jni
-        ln -sf "$(pwd)/hev-socks5-tunnel" "V2rayNG/app/src/main/jni/hev-socks5-tunnel"
         
-        # Add jni path to build path for NDK
-        echo "ndk.dir=$ANDROID_HOME/ndk/29.0.13113456" >> V2rayNG/local.properties
+        # Try direct copy approach for critical files
+        echo "Preparing source and build files..."
+        mkdir -p build-tmp
+        cp -r hev-socks5-tunnel/* build-tmp/
+        cp hev-socks5-tunnel/.git* build-tmp/ || true
         
-        # Build the library
-        echo "Building hev-socks5-tunnel with NDK..."
-        cd V2rayNG/app/src/main
-        export NDK_PROJECT_PATH=.
-        $NDK_HOME/ndk-build -C jni APP_BUILD_SCRIPT=jni/hev-socks5-tunnel/Android.mk APP_ABI=all APP_PLATFORM=android-21 NDK_LIBS_OUT=../libs NDK_OUT=../obj APP_SHORT_COMMANDS=false LOCAL_SHORT_COMMANDS=false -B
-        cd ../../../../
-      continue-on-error: true
+        # Make script executable
+        chmod +x compile-hev-socks5-tunnel.sh
+        bash compile-hev-socks5-tunnel.sh
 
     - name: Save libhev-socks5-tunnel
       if: steps.cache-libhev-socks5-tunnel-restore.outputs.cache-hit != 'true'
